manifests/cluster-addons/vaultwarden/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  hostnames:
    - vaultwarden.bakseter.net

  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: home-bakseter-net
      namespace: tailscale

  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: vaultwarden
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
