manifests/cluster-addons/vaultwarden/ciliumnetworkpolicy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: vaultwarden

  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: envoy-gateway-system
            app.kubernetes.io/name: envoy
            gateway.envoyproxy.io/owning-gateway-name: tailscale-home
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: monitoring
            app.kubernetes.io/name: prometheus-blackbox-exporter
      toPorts:
        - ports:
            - port: '8080'
              protocol: TCP

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/instance: vaultwarden-database
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - toFQDNs:
        - matchPattern: '*'
      toPorts:
        - ports:
            - port: '443'
              protocol: TCP
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: vaultwarden-database
  namespace: vaultwarden
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: vaultwarden-database

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: vaultwarden
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP

    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: '5432'
              protocol: TCP
            - port: '8000'
              protocol: TCP

    - fromEntities:
        - remote-node
        - host
      icmps:
        - fields:
            - type: 8
              family: IPv4

  egress:
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s-app: kube-dns
      toPorts:
        - ports:
            - port: '53'
              protocol: ANY
          rules:
            dns:
              - matchPattern: '*'

    - toEntities:
        - kube-apiserver

    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: cloudnative-pg
            k8s:io.kubernetes.pod.namespace: cnpg-system
      toPorts:
        - ports:
            - port: '8000'
              protocol: TCP
